syntax = "proto3";

package monopoly;
option csharp_namespace = "Monopoly.Protobuf";

import "monopoly/game_player.proto";

// type : "announce_player_left"
// packet_type : REQUEST
message AnnouncePlayerLeftPayload { GamePlayer player = 1; }